gRbase v1.8-6.5 (Release date: 2020-XX-XX)
==========================================

Bug fixes

  * tab_expand_ fixed and expanded to take arguement describing how
    expansiion should bed made.

  * list based coercion functions fixed to work with empty lists   

Other changes:

  * matrix2list changed to take MARGIN argument
  

gRbase v1.8-5.3 (Release date: 2020-02-18)
==========================================

Bug fixes:

  * Even more functions are exported (changed from manually generated
    to automatically generated NAMESPACE file; this has caused
    downstream trouble.

Other changes:

  * More tests added Would like to use snake_case rather than
  * camelCase in function names, but this causes too much trouble to
  * change downstream so we accept dual names for some functions for now.

gRbase v1.8-5.2 (Release date: 2020-02-06)
==========================================

Bug fixes:

  * More functiones are exported

Other changes:

  * NEWS file added
  * NAMESPACE file is now generated automatically
  * Cleaning up experimental features
  * Added testthat (not very comprehensive tests, though)
  