@@ -333,6 +333,7 @@ export(tableMargin)
 export(tableMult)
 export(tableOp)
 export(tableOp2)
+export(tableOp3)
 export(tablePerm)
 export(tableSetSliceValue)
 export(tableSlice)
