@@ -7,6 +7,7 @@
 \alias{tableDiv}
 \alias{tableOp}
 \alias{tableOp2}
+\alias{tableOp3}
 \alias{tableSlice}
 \alias{tableSlicePrim}
 \alias{tableMargin}
@@ -23,6 +24,8 @@ tableDiv(tab1, tab2)
 tableOp(tab1, tab2, op = "*")
 
 tableOp2(tab1, tab2, op = `*`, restore = FALSE)
+
+tableOp3(tab1, tab2, op = `*`)
 
 tableSlice(tab, margin, level, impose)
 
@@ -67,4 +70,8 @@ TRUE).}
 Array operations; created to facilitate the gRain
     package in 2007. Now largely replaceable by other (often
     faster) functions implemented in Rcpp.
+}
+\details{
+`tableOp3` is brute force implementation based on
+    dataframes. It is very slow, but useful for error checking.
 }
