@@ -1225,41 +1225,6 @@ RcppExport SEXP _gRbase_tab_expand_(SEXP tabSEXP, SEXP auxSEXP, SEXP typeSEXP) {
     UNPROTECT(1);
     return rcpp_result_gen;
 }
-// foo
-SEXP foo(const SEXP& tab, SEXP& aux);
-static SEXP _gRbase_foo_try(SEXP tabSEXP, SEXP auxSEXP) {
-BEGIN_RCPP
-    Rcpp::RObject rcpp_result_gen;
-    Rcpp::traits::input_parameter< const SEXP& >::type tab(tabSEXP);
-    Rcpp::traits::input_parameter< SEXP& >::type aux(auxSEXP);
-    rcpp_result_gen = Rcpp::wrap(foo(tab, aux));
-    return rcpp_result_gen;
-END_RCPP_RETURN_ERROR
-}
-RcppExport SEXP _gRbase_foo(SEXP tabSEXP, SEXP auxSEXP) {
-    SEXP rcpp_result_gen;
-    {
-        Rcpp::RNGScope rcpp_rngScope_gen;
-        rcpp_result_gen = PROTECT(_gRbase_foo_try(tabSEXP, auxSEXP));
-    }
-    Rboolean rcpp_isInterrupt_gen = Rf_inherits(rcpp_result_gen, "interrupted-error");
-    if (rcpp_isInterrupt_gen) {
-        UNPROTECT(1);
-        Rf_onintr();
-    }
-    bool rcpp_isLongjump_gen = Rcpp::internal::isLongjumpSentinel(rcpp_result_gen);
-    if (rcpp_isLongjump_gen) {
-        Rcpp::internal::resumeJump(rcpp_result_gen);
-    }
-    Rboolean rcpp_isError_gen = Rf_inherits(rcpp_result_gen, "try-error");
-    if (rcpp_isError_gen) {
-        SEXP rcpp_msgSEXP_gen = Rf_asChar(rcpp_result_gen);
-        UNPROTECT(1);
-        Rf_error(CHAR(rcpp_msgSEXP_gen));
-    }
-    UNPROTECT(1);
-    return rcpp_result_gen;
-}
 // tab_align_
 SEXP tab_align_(const SEXP& tab1, const SEXP& tab2);
 static SEXP _gRbase_tab_align__try(SEXP tab1SEXP, SEXP tab2SEXP) {
@@ -1841,7 +1806,6 @@ static int _gRbase_RcppExport_validate(const char* sig) {
         signatures.insert("IntegerVector(*perm_cell_entries_)(const IntegerVector&,const IntegerVector&)");
         signatures.insert("SEXP(*tab_perm_)(const SEXP&,const SEXP&)");
         signatures.insert("SEXP(*tab_expand_)(const SEXP&,const SEXP&,const int&)");
-        signatures.insert("SEXP(*foo)(const SEXP&,SEXP&)");
         signatures.insert("SEXP(*tab_align_)(const SEXP&,const SEXP&)");
         signatures.insert("SEXP(*tab_marg_)(const SEXP&,const SEXP&)");
         signatures.insert("NumericVector(*tab_op_)(const NumericVector&,const NumericVector&,const char)");
@@ -1891,7 +1855,6 @@ RcppExport SEXP _gRbase_RcppExport_registerCCallable() {
     R_RegisterCCallable("gRbase", "_gRbase_perm_cell_entries_", (DL_FUNC)_gRbase_perm_cell_entries__try);
     R_RegisterCCallable("gRbase", "_gRbase_tab_perm_", (DL_FUNC)_gRbase_tab_perm__try);
     R_RegisterCCallable("gRbase", "_gRbase_tab_expand_", (DL_FUNC)_gRbase_tab_expand__try);
-    R_RegisterCCallable("gRbase", "_gRbase_foo", (DL_FUNC)_gRbase_foo_try);
     R_RegisterCCallable("gRbase", "_gRbase_tab_align_", (DL_FUNC)_gRbase_tab_align__try);
     R_RegisterCCallable("gRbase", "_gRbase_tab_marg_", (DL_FUNC)_gRbase_tab_marg__try);
     R_RegisterCCallable("gRbase", "_gRbase_tab_op_", (DL_FUNC)_gRbase_tab_op__try);
